# acp-openai

./: README.md  pyproject.toml
examples/: echo_agent.py
src/acp_openai_middleware/: agent_manager.py  main.py  openai_mapper.py  schemas.py  session_pool.py  stream_adapter.py
src/acp_openai_middleware/routes/: chat.py  models.py
tests/: test_openai_mapper.py  test_session_pool.py  test_think_block.py
