[project]
name = "acp-openai-middleware"
version = "0.1.0"
description = "ACP-to-OpenAI compatible middleware — let OpenAI clients use ACP agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "agent-client-protocol>=0.10",
    "pydantic>=2.0",
    "sse-starlette>=2.0",
]

[project.scripts]
acp-openai-middleware = "acp_openai_middleware.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acp_openai_middleware"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
